[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Sprites/BrownPanel100.stylebox" type="StyleBox" id=1]
[ext_resource path="res://Entity/Player/UIController/Inventory/InventoryUI.gd" type="Script" id=4]
[ext_resource path="res://Entity/Player/UIController/Inventory/ItemHolderBase.tscn" type="PackedScene" id=5]

[node name="InventoryUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HotkeysMargin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -165.0
margin_top = -42.0
margin_right = 165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotkeysPanel" type="Panel" parent="HotkeysMargin"]
margin_right = 330.0
margin_bottom = 42.0
rect_min_size = Vector2( 330, 42 )
custom_styles/panel = ExtResource( 1 )

[node name="HotkeysContainer" type="HBoxContainer" parent="HotkeysMargin/HotkeysPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -43.0
margin_bottom = -5.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemHolder" parent="HotkeysMargin/HotkeysPanel/HotkeysContainer" instance=ExtResource( 5 )]

[node name="ItemHolder2" parent="HotkeysMargin/HotkeysPanel/HotkeysContainer" instance=ExtResource( 5 )]
margin_left = 32.0
margin_right = 64.0

[node name="ItemHolder3" parent="HotkeysMargin/HotkeysPanel/HotkeysContainer" instance=ExtResource( 5 )]
margin_left = 64.0
margin_right = 96.0

[node name="ItemHolder4" parent="HotkeysMargin/HotkeysPanel/HotkeysContainer" instance=ExtResource( 5 )]
margin_left = 96.0
margin_right = 128.0

[node name="Tooltip" type="Panel" parent="."]
margin_left = 282.636
margin_top = 276.126
margin_right = 397.636
margin_bottom = 386.126
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
